--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
     const fotos = [
       "imgs/foto1.jpeg",
       "imgs/foto2.jpeg",
-      "imgs/foto3.png"
+      "imgs/foto3.png",
     ];
 
     setInterval(() => {
@@ -199,4 +199,5 @@
 
 </body>
 </html>
+
 
