--- a/pagina2.html
+++ b/pagina2.html
@@ -164,7 +164,7 @@
     const fotos = [
       "imgs/foto1.jpeg",
       "imgs/foto2.jpeg",
-      "imgs/foto3.png"
+      "imgs/foto3.png",
     ];
 
     setInterval(() => {
@@ -185,5 +185,6 @@
 
 </body>
 </html>
+
 
 
