--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
 <body>
 
   <div class="card">
-    <h1>Oi macaquinha 💙</h1>
+    <h1>Oi Macaquinha 💙</h1>
     <p id="mensagem"></p>
     <div class="assinatura">— ATT SEU MELHOR AMIGO (JOÃO)</div>
 
@@ -199,5 +199,6 @@
 
 </body>
 </html>
+
 
 
